[#125] fixed up the visual issues with the remove notification by setting the animation to 2s and modifying the z-index of the remove notification

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -69,6 +69,7 @@
     top: 470px;
     left: 75px;
     position: absolute;
+    z-index: 20;
 }
 
 .status-field {
